--- a/p8105_hw3_sz2800.md
+++ b/p8105_hw3_sz2800.md
@@ -96,6 +96,71 @@ sweets = instacart %>%
 
 ## Q2 BRFSS
 
+Data cleaning: format the data to use appropriate variable names; focus
+on the “Overall Health” topic; include only responses from “Excellent”
+to “Poor”; organize responses as a factor taking levels ordered from
+“Poor” to “Excellent”;
+
 ``` r
-brfss = data(brfss_smart2010)
+data(brfss_smart2010)
+
+brfss = brfss_smart2010 %>% 
+  janitor::clean_names() %>% 
+  filter(topic == "Overall Health") %>% 
+  filter(response == c("Excellent", "Very good", "Good", "Fair", "Poor")) %>%
+  mutate(response = forcats::fct_relevel(response, c("Excellent", "Very good", "Good", "Fair", "Poor"))) 
+```
+
+In 2002, which states were observed at 7 or more locations? What about
+in 2010?
+
+``` r
+state_loca_07 = brfss %>% 
+  filter (year == 2007) %>% 
+  group_by (year, locationabbr) %>% 
+  summarize(distinct_loca = n_distinct(locationdesc)) %>%
+  filter (distinct_loca >= 7) 
+
+state_loca_10 = brfss %>% 
+  filter (year == 2010) %>% 
+  group_by (year, locationabbr) %>% 
+  summarize(distinct_loca = n_distinct(locationdesc)) %>%
+  filter (distinct_loca >= 7) 
+```
+
+Construct a dataset that is limited to Excellent responses, and
+contains, year, state, and a variable that averages the data\_value
+across locations within a state. Make a “spaghetti” plot of this average
+value over time within a state (that is, make a plot showing a line for
+each state across years – the geom\_line geometry and group aesthetic
+will help).
+
+``` r
+brfss_preplot = brfss %>% 
+  select(year, response, locationabbr, data_value) %>% 
+  filter(response == "Excellent") %>% 
+  group_by(year, locationabbr) %>% 
+  summarize(mean_data = mean(data_value, na.rm = TRUE))
+
+brfss_plot = ggplot(data = brfss_preplot, aes(x = year, y = mean_data, color = locationabbr)) + 
+    geom_line()
+```
+
+Make a two-panel plot showing, for the years 2006, and 2010,
+distribution of data\_value for responses (“Poor” to “Excellent”) among
+locations in NY State.
+
+``` r
+brfss_ny = brfss %>% 
+  select(year, data_value, response, locationdesc, locationabbr) %>% 
+  filter(year == c(2006, 2010), locationabbr == "NY")
+```
+
+    ## Warning in year == c(2006, 2010): longer object length is not a multiple of
+    ## shorter object length
+
+``` r
+brfss_ny_plot = ggplot(data = brfss_ny, aes(x = response, y = data_value, color = locationdesc)) +
+  geom_line() +
+  facet_wrap(~year)
 ```
