3rd Commit: Attempting question#3

--- a/p8105_hw3_sz2800.md
+++ b/p8105_hw3_sz2800.md
@@ -108,7 +108,9 @@ brfss = brfss_smart2010 %>%
   janitor::clean_names() %>% 
   filter(topic == "Overall Health") %>% 
   filter(response == c("Excellent", "Very good", "Good", "Fair", "Poor")) %>%
-  mutate(response = forcats::fct_relevel(response, c("Excellent", "Very good", "Good", "Fair", "Poor"))) 
+  mutate(response = as.factor(response)) %>% 
+  mutate(response = forcats::fct_relevel(response, c("Poor", "Fair", "Good", "Very good", "Excellent"))) %>% 
+  arrange(response)
 ```
 
 In 2002, which states were observed at 7 or more locations? What about
@@ -160,7 +162,52 @@ brfss_ny = brfss %>%
     ## shorter object length
 
 ``` r
-brfss_ny_plot = ggplot(data = brfss_ny, aes(x = response, y = data_value, color = locationdesc)) +
-  geom_line() +
+brfss_ny_plot = ggplot(data = brfss_ny, aes(x = response, y = data_value)) +
+  geom_boxplot() +
   facet_wrap(~year)
+```
+
+## Q3: Accelerometers
+
+Load, tidy, and otherwise wrangle the data. Your final dataset should
+include all originally observed variables and values; have useful
+variable names; include a weekday vs weekend variable; and encode data
+with reasonable variable classes. Describe the resulting dataset
+(e.g. what variables exist, how many observations, etc).
+
+``` r
+accel = read_csv("./accel_data.csv") %>%
+  janitor::clean_names() %>% 
+  pivot_longer(
+    activity_1:activity_1440,
+    names_to = "time_mins",
+    names_prefix = "activity_",
+    values_to = "activity"
+  ) %>%
+  mutate(time_mins = as.numeric(time_mins))
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_double(),
+    ##   day = col_character()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+Traditional analyses of accelerometer data focus on the total activity
+over the day. Using your tidied dataset, aggregate accross minutes to
+create a total activity variable for each day, and create a table
+showing these totals. Are any trends apparent?
+
+``` r
+accel_sum_table = accel %>% 
+  group_by(day_id) %>% 
+  summarize(total_act = sum(activity), avg_act = mean(activity))
+
+accel_sum_plot_1 = ggplot(accel_sum_table, aes(x = day_id, y = total_act)) +
+  geom_line()
+
+accel_sum_plot_2 = ggplot(accel_sum_table, aes(x = day_id, y = avg_act)) +
+  geom_line()
 ```
