Fourth Commit: Hopefully finished Q3. Need to check.

--- a/p8105_hw3_sz2800.md
+++ b/p8105_hw3_sz2800.md
@@ -1,7 +1,7 @@
 p8105\_hw3\_sz2800.Rmd
 ================
 Stephanie Zhen
-10/8/2019
+10/14/2019
 
 ``` r
 library (tidyverse)
@@ -30,24 +30,28 @@ library (p8105.datasets)
 
 ## Q1: Instacart
 
-How many aisles are there, and which aisles are the most items ordered
-from?
-
 ``` r
 data("instacart")
+```
 
+The dimension of instacart is 1384617, 15 with 1384617 observations and
+the following key variables: order\_id, product\_id,
+add\_to\_cart\_order, reordered, user\_id, eval\_set, order\_number,
+order\_dow, order\_hour\_of\_day, days\_since\_prior\_order,
+product\_name, aisle\_id, department\_id, aisle, department.
+
+``` r
 count = instacart %>%
   group_by(aisle)%>% 
   summarize(aisle_count = n()) %>% 
   arrange(desc(aisle_count))
 ```
 
-Based on the instacart data, there are 134 types of aisles with “fresh
-vegetable” being the most popular aisles with a 150609 aisles.
+Based on the instacart data, there are 134 types of aisles with fresh
+vegetables being the most popular aisles with 150609 aisles.
 
-Make a plot that shows the number of items ordered in each aisle,
-limiting this to aisles with more than 10000 items ordered. Arrange
-aisles sensibly, and organize your plot so others can read it.
+Plot with number of items ordered in each aisle, limiting to aisles with
+more than 10000 items ordered.
 
 ``` r
 items_aisles = count %>% 
@@ -59,15 +63,17 @@ items_aisles_plot = ggplot(data = items_aisles, aes(x = reorder(aisle, aisle_cou
   coord_flip() 
 ```
 
-Make a table showing the three most popular items in each of the aisles
-“baking ingredients”, “dog food care”, and “packaged vegetables
-fruits”. Include the number of times each item is ordered in your
-table.
+There is 39 aisles that has more than 10000 items ordered with the least
+amount of orders from butter with 10575 orders and the largest number of
+orders from fresh vegetables, a total of 150609 orders.
+
+Table with the three most popular items in each of the aisles “baking
+ingredients”, “dog food care”, and “packaged vegetables fruits”.
 
 ``` r
 aisles_tables = instacart %>% 
   select(aisle, product_name) %>% 
-  filter(aisle == c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
   group_by(aisle, product_name) %>% 
   summarize(pop_count = n()) %>% 
   top_n(3)
@@ -75,31 +81,33 @@ aisles_tables = instacart %>%
 
     ## Selecting by pop_count
 
-Make a table showing the mean hour of the day at which Pink Lady Apples
-and Coffee Ice Cream are ordered on each day of the week; format this
-table for human readers (i.e. produce a 2 x 7 table)
+Table with mean hour of the day at which Pink Lady Apples and Coffee Ice
+Cream are ordered on each day of the week.
 
 ``` r
 sweets = instacart %>% 
   select(product_name, order_dow, order_hour_of_day) %>% 
-  filter(product_name == c("Pink Lady Apples", "Coffee Ice Cream")) %>%
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>%
   group_by (product_name, order_dow) %>% 
   summarize(mean_time = mean(order_hour_of_day)) %>%
   pivot_wider(
     names_from = order_dow,
     values_from = mean_time
-  )
+  ) 
+
+knitr::kable(sweets, digits = 2)
 ```
 
-    ## Warning in product_name == c("Pink Lady Apples", "Coffee Ice Cream"):
-    ## longer object length is not a multiple of shorter object length
+| product\_name      |        0 |        1 |       2 |        3 |       4 |        5 |             6 |
+| :----------------- | -------: | -------: | ------: | -------: | ------: | -------: | ------------: |
+| Coffee Ice Cream   |    13.77 |    14.32 |   15.38 |    15.32 |   15.22 |    12.26 |         13.83 |
+| Pink Lady Apples   |    13.44 |    11.36 |   11.70 |    14.25 |   11.55 |    12.78 |         11.94 |
+| Assumed, Sunday is | equivale | nt to ze | ro, and | Monday - | Saturda | y follws | sequentially. |
 
 ## Q2 BRFSS
 
-Data cleaning: format the data to use appropriate variable names; focus
-on the “Overall Health” topic; include only responses from “Excellent”
-to “Poor”; organize responses as a factor taking levels ordered from
-“Poor” to “Excellent”;
+Data cleaning:“Overall Health” topic with ordered responses from
+“Excellent” to “Poor”.
 
 ``` r
 data(brfss_smart2010)
@@ -107,7 +115,7 @@ data(brfss_smart2010)
 brfss = brfss_smart2010 %>% 
   janitor::clean_names() %>% 
   filter(topic == "Overall Health") %>% 
-  filter(response == c("Excellent", "Very good", "Good", "Fair", "Poor")) %>%
+  filter(response %in% c("Excellent", "Very good", "Good", "Fair", "Poor")) %>%
   mutate(response = as.factor(response)) %>% 
   mutate(response = forcats::fct_relevel(response, c("Poor", "Fair", "Good", "Very good", "Excellent"))) %>% 
   arrange(response)
@@ -117,25 +125,25 @@ In 2002, which states were observed at 7 or more locations? What about
 in 2010?
 
 ``` r
-state_loca_07 = brfss %>% 
-  filter (year == 2007) %>% 
-  group_by (year, locationabbr) %>% 
+state_loca_02 = brfss %>% 
+  filter (year == 2002) %>% 
+  group_by (locationabbr) %>% 
   summarize(distinct_loca = n_distinct(locationdesc)) %>%
   filter (distinct_loca >= 7) 
 
 state_loca_10 = brfss %>% 
   filter (year == 2010) %>% 
-  group_by (year, locationabbr) %>% 
+  group_by (locationabbr) %>% 
   summarize(distinct_loca = n_distinct(locationdesc)) %>%
   filter (distinct_loca >= 7) 
 ```
 
-Construct a dataset that is limited to Excellent responses, and
-contains, year, state, and a variable that averages the data\_value
-across locations within a state. Make a “spaghetti” plot of this average
-value over time within a state (that is, make a plot showing a line for
-each state across years – the geom\_line geometry and group aesthetic
-will help).
+The states that were observed at 7 or more locations are: CT, FL, MA,
+NC, NJ, PA. The states that are observed at 7 or more locations at 2010
+are: CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA.
+
+Make a “spaghetti” plot of average data\_value over time within a state
+limited to only “Excellent” responses.
 
 ``` r
 brfss_preplot = brfss %>% 
@@ -145,7 +153,8 @@ brfss_preplot = brfss %>%
   summarize(mean_data = mean(data_value, na.rm = TRUE))
 
 brfss_plot = ggplot(data = brfss_preplot, aes(x = year, y = mean_data, color = locationabbr)) + 
-    geom_line()
+    geom_line() +
+  labs(title = "Average Data value Over Time within a State", x = "Years", y = "Average Data", color = "States")
 ```
 
 Make a two-panel plot showing, for the years 2006, and 2010,
@@ -164,20 +173,18 @@ brfss_ny = brfss %>%
 ``` r
 brfss_ny_plot = ggplot(data = brfss_ny, aes(x = response, y = data_value)) +
   geom_boxplot() +
-  facet_wrap(~year)
+  facet_wrap(~year) + 
+  labs(title = "Average Data value for Responses in NY", x = "Response", y = "Average Data")
 ```
 
 ## Q3: Accelerometers
 
-Load, tidy, and otherwise wrangle the data. Your final dataset should
-include all originally observed variables and values; have useful
-variable names; include a weekday vs weekend variable; and encode data
-with reasonable variable classes. Describe the resulting dataset
-(e.g. what variables exist, how many observations, etc).
+Tidying Accel Dataset.
 
 ``` r
 accel = read_csv("./accel_data.csv") %>%
   janitor::clean_names() %>% 
+  mutate(day_week = ifelse(day %in% c("Saturday", "Sunday"), "weekend", "weekday")) %>% 
   pivot_longer(
     activity_1:activity_1440,
     names_to = "time_mins",
@@ -195,19 +202,70 @@ accel = read_csv("./accel_data.csv") %>%
 
     ## See spec(...) for full column specifications.
 
-Traditional analyses of accelerometer data focus on the total activity
-over the day. Using your tidied dataset, aggregate accross minutes to
-create a total activity variable for each day, and create a table
-showing these totals. Are any trends apparent?
+Aggregate accross minutes to create a total activity variable for each
+day.
 
 ``` r
 accel_sum_table = accel %>% 
-  group_by(day_id) %>% 
+  group_by(day, day_id) %>% 
   summarize(total_act = sum(activity), avg_act = mean(activity))
 
 accel_sum_plot_1 = ggplot(accel_sum_table, aes(x = day_id, y = total_act)) +
   geom_line()
 
-accel_sum_plot_2 = ggplot(accel_sum_table, aes(x = day_id, y = avg_act)) +
-  geom_line()
+knitr::kable(accel_sum_table, digits = 2)
 ```
+
+| day       | day\_id | total\_act | avg\_act |
+| :-------- | ------: | ---------: | -------: |
+| Friday    |       1 |  480542.62 |   333.71 |
+| Friday    |       8 |  568839.00 |   395.03 |
+| Friday    |      15 |  467420.00 |   324.60 |
+| Friday    |      22 |  154049.00 |   106.98 |
+| Friday    |      29 |  620860.00 |   431.15 |
+| Monday    |       2 |   78828.07 |    54.74 |
+| Monday    |       9 |  295431.00 |   205.16 |
+| Monday    |      16 |  685910.00 |   476.33 |
+| Monday    |      23 |  409450.00 |   284.34 |
+| Monday    |      30 |  389080.00 |   270.19 |
+| Saturday  |       3 |  376254.00 |   261.29 |
+| Saturday  |      10 |  607175.00 |   421.65 |
+| Saturday  |      17 |  382928.00 |   265.92 |
+| Saturday  |      24 |    1440.00 |     1.00 |
+| Saturday  |      31 |    1440.00 |     1.00 |
+| Sunday    |       4 |  631105.00 |   438.27 |
+| Sunday    |      11 |  422018.00 |   293.07 |
+| Sunday    |      18 |  467052.00 |   324.34 |
+| Sunday    |      25 |  260617.00 |   180.98 |
+| Sunday    |      32 |  138421.00 |    96.13 |
+| Thursday  |       5 |  355923.64 |   247.17 |
+| Thursday  |      12 |  474048.00 |   329.20 |
+| Thursday  |      19 |  371230.00 |   257.80 |
+| Thursday  |      26 |  340291.00 |   236.31 |
+| Thursday  |      33 |  549658.00 |   381.71 |
+| Tuesday   |       6 |  307094.24 |   213.26 |
+| Tuesday   |      13 |  423245.00 |   293.92 |
+| Tuesday   |      20 |  381507.00 |   264.94 |
+| Tuesday   |      27 |  319568.00 |   221.92 |
+| Tuesday   |      34 |  367824.00 |   255.43 |
+| Wednesday |       7 |  340115.01 |   236.19 |
+| Wednesday |      14 |  440962.00 |   306.22 |
+| Wednesday |      21 |  468869.00 |   325.60 |
+| Wednesday |      28 |  434460.00 |   301.71 |
+| Wednesday |      35 |  445366.00 |   309.28 |
+
+There is no trend between total activity and days. There is no uniform
+decrease or uniform increase in the activities as the days passes.
+
+Plot of daily activities across days of the
+week.
+
+``` r
+accel_sum_plot_2 = ggplot(accel_sum_table, aes(x = day_id, y = total_act, color = day)) +
+  geom_smooth() +
+  labs(x = "Day", y = "Total Activity", title = "Daily Activity across 35 Days", color = "Day of the Week")
+```
+
+There is no general trend in the activity as the days increase, and
+there is no uniform increase of decrease in activity between the
+different days of the week.
