Fifth Commit: Labeled graphs and knitr::kabel for the tables.

--- a/p8105_hw3_sz2800.md
+++ b/p8105_hw3_sz2800.md
@@ -130,17 +130,44 @@ state_loca_02 = brfss %>%
   group_by (locationabbr) %>% 
   summarize(distinct_loca = n_distinct(locationdesc)) %>%
   filter (distinct_loca >= 7) 
+knitr::kable(state_loca_02, digits = 1)
+```
 
+| locationabbr | distinct\_loca |
+| :----------- | -------------: |
+| CT           |              7 |
+| FL           |              7 |
+| MA           |              8 |
+| NC           |              7 |
+| NJ           |              8 |
+| PA           |             10 |
+
+``` r
 state_loca_10 = brfss %>% 
   filter (year == 2010) %>% 
   group_by (locationabbr) %>% 
   summarize(distinct_loca = n_distinct(locationdesc)) %>%
   filter (distinct_loca >= 7) 
+knitr::kable(state_loca_10, digits = 1)
 ```
 
-The states that were observed at 7 or more locations are: CT, FL, MA,
-NC, NJ, PA. The states that are observed at 7 or more locations at 2010
-are: CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA.
+| locationabbr    |                                                                                                                                                                             distinct\_loca |
+| :-------------- | -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
+| CA              |                                                                                                                                                                                         12 |
+| CO              |                                                                                                                                                                                          7 |
+| FL              |                                                                                                                                                                                         41 |
+| MA              |                                                                                                                                                                                          9 |
+| MD              |                                                                                                                                                                                         12 |
+| NC              |                                                                                                                                                                                         12 |
+| NE              |                                                                                                                                                                                         10 |
+| NJ              |                                                                                                                                                                                         19 |
+| NY              |                                                                                                                                                                                          9 |
+| OH              |                                                                                                                                                                                          8 |
+| PA              |                                                                                                                                                                                          7 |
+| SC              |                                                                                                                                                                                          7 |
+| TX              |                                                                                                                                                                                         16 |
+| WA              |                                                                                                                                                                                         10 |
+| The states that | were observed at 7 or more locations are: CT, FL, MA, NC, NJ, PA. The states that are observed at 7 or more locations at 2010 are: CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA. |
 
 Make a “spaghetti” plot of average data\_value over time within a state
 limited to only “Excellent” responses.
@@ -171,10 +198,10 @@ brfss_ny = brfss %>%
     ## shorter object length
 
 ``` r
-brfss_ny_plot = ggplot(data = brfss_ny, aes(x = response, y = data_value)) +
+brfss_ny_plot = ggplot(data = brfss_ny, aes(x = response, y = data_value, color = response)) +
   geom_boxplot() +
   facet_wrap(~year) + 
-  labs(title = "Average Data value for Responses in NY", x = "Response", y = "Average Data")
+  labs(title = "Average Data value for Responses in NY", x = "Response", y = "Average Data", color = "Response")
 ```
 
 ## Q3: Accelerometers
